gutenberg style register and edit/new editor popup z-index issue fixed

--- a/inc/admin/js/core/gutenberg-src/style/block-style.sass
+++ b/inc/admin/js/core/gutenberg-src/style/block-style.sass
@@ -4,7 +4,6 @@
 .wptb-block-wrapper
   position: relative
   width: 100%
-  //max-width: 700px
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen-Sans, Ubuntu, Cantarell, Helvetica Neue, sans-serif
   color: $theme-text-default-color
   border-radius: 5px
@@ -265,7 +264,7 @@
   left: 0
   width: 100%
   height: 100%
-  z-index: 1000000000
+  z-index: 100
   display: grid
   grid-template-columns: 1fr
   grid-template-rows: 1fr
